<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dataset"
    android:background="@drawable/appback"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create New Tasks"
        android:textSize="38dp"
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        />
    <Spinner

        android:id="@+id/categorySpinner"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_below="@id/endTimeButton"

        android:layout_marginTop="10dp"

        android:minHeight="48dp"

        tools:ignore="SpeakableTextPresentCheck" />
    <EditText
android:layout_marginTop="25dp"
        android:id="@+id/nameEditText"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:hint="@string/enter_name"

        android:minHeight="48dp"

        android:importantForAutofill="no"

        tools:ignore="TextFields" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button

        android:id="@+id/startDateButton"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_below="@id/nameEditText"
android:layout_marginLeft="50dp"
        android:layout_marginTop="12dp"

        android:text="@string/start_date" />

    <Button

        android:id="@+id/startTimeButton"

        android:layout_width="wrap_content"

        android:layout_height="48dp"

        android:layout_below="@id/startDateButton"
android:layout_marginLeft="50dp"
        android:layout_marginTop="12dp"

        android:layout_toEndOf="@id/startDateButton"

        android:text="@string/start_time" />
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button

        android:id="@+id/endDateButton"

        android:layout_width="wrap_content"

        android:layout_height="48dp"
        android:layout_below="@id/startTimeButton"

        android:layout_marginLeft="50dp"
        android:layout_marginTop="12dp"


        android:layout_toEndOf="@id/startTimeButton"

        android:text="@string/end_date" />

    <Button

        android:id="@+id/endTimeButton"

        android:layout_width="wrap_content"

        android:layout_height="48dp"

        android:layout_below="@id/endDateButton"
android:layout_marginLeft="70dp"
        android:layout_marginTop="12dp"

        android:layout_toEndOf="@id/endDateButton"

        android:text="@string/end_time" />
</LinearLayout>



    <EditText

        android:id="@+id/descriptionEditText"

        android:layout_width="371dp"

        android:layout_height="48dp"

        android:layout_below="@id/endTimeButton"

        android:layout_marginTop="30dp"

        android:hint="@string/enter_description"

        android:importantForAutofill="no"

        android:minHeight="48dp"

        tools:ignore="TextFields" />




    <Button
        android:id="@+id/btnPic"
        android:layout_width="176dp"
        android:onClick= "CaptureOnClick"
        android:layout_height="wrap_content"
        android:text="@string/take_picture" />

    <Button

        android:id="@+id/submitButton"

        android:layout_width="180dp"

        android:layout_height="wrap_content"

        android:layout_below="@id/descriptionEditText"

        android:layout_marginTop="10dp"

        android:text="@string/submit" />
    <Button
        android:id="@+id/readButton"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="View Tasks "
        android:visibility="invisible"/>



</LinearLayout>
