<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/appback">


    <TextView

        android:id="@+id/textView"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:fontFamily="casual"

        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="30sp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.449"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.09" />

    <EditText

        android:id="@+id/editTextTextEmailAddress"
        android:hint="@string/e_mail"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:importantForAutofill="no"

        android:inputType="textEmailAddress"

        android:minHeight="48dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.497"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textView"

        app:layout_constraintVertical_bias="0.16"

        tools:ignore="LabelFor,SpeakableTextPresentCheck" />



    <EditText

        android:id="@+id/editTextTextPassword"

        android:layout_width="match_parent"
        android:hint="@string/password"
        android:layout_height="wrap_content"

        android:importantForAutofill="no"

        android:inputType="textPassword"

        android:minHeight="48dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.497"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"

        app:layout_constraintVertical_bias="0.153"

        tools:ignore="LabelFor,SpeakableTextPresentCheck" />


    <Button

        android:id="@+id/button"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:onClick="loginUser"

        android:text="@string/Login"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.198"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.221"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button

        android:id="@+id/button2"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:onClick="cancelFields"

        android:text="@string/cancel"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.715"

        app:layout_constraintStart_toEndOf="@+id/button"

        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"

        app:layout_constraintVertical_bias="0.221" />

    <Button

        android:id="@+id/button5"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="136dp"

        android:onClick="regScreen"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.478"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>